Revert "Fix: Navbar Fonts Readability and Accessibility (#777)"
This reverts commit 84c60a43ade4405d05f5a83ea8ce780a49703344.

--- a/assets/scss/academic/_nav.scss
+++ b/assets/scss/academic/_nav.scss
@@ -49,17 +49,9 @@
         color: $sta-menu-text;
       }
 
-      &:hover,
-      &:focus {
-        text-decoration: underline;
-        text-underline-offset: 3px;
-      }
-
       &.active {
         font-weight: bold !important;
         color: $sta-menu-text-active !important;
-        text-decoration: underline;
-        text-underline-offset: 3px;
       }
     }
   }
@@ -220,14 +212,6 @@ ul.nav-icons li.nav-item a.nav-link {
 .dropdown-item {
   background-color: $sta-menu-primary !important;
   color: $sta-menu-text !important;
-
-  &:hover,
-  &:focus {
-    background-color: rgba(255, 255, 255, 0.12) !important;
-    color: $sta-menu-text !important;
-    text-decoration: underline;
-    text-underline-offset: 3px;
-  }
 }
 
 /******************************************************************************
