--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,13 +1,4 @@
 // add your own SCSS styling.
-
-/* -------------------------------------------------- */
-/* Navbar accessibility & readability  fonts          */
-/* -------------------------------------------------- */
-
-.navbar-light {
-  font-family: "Inter", "Open Sans", "Lexend", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important; 
-}
-
 .border-3 {
   border-width: 3px !important;
 }
